--- a/myapp/templates/projects.html
+++ b/myapp/templates/projects.html
@@ -1,3 +1,10 @@
 <h1>Projectos</h1>
 
+{% for project in projects %}
+
+<h1>{{project.name}}</h1>
+<button>Delete</button>
+
+{% endfor %}
+
 <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores molestiae, ipsum aperiam error amet quis id aspernatur a saepe, veniam praesentium itaque officia reprehenderit explicabo sed nemo fugit animi fugiat.</h2>
