--- a/myapp/templates/task.html
+++ b/myapp/templates/task.html
@@ -1,2 +1,16 @@
 <h1>Task</h1>
+
+{% for task in tasks %}
+
+<div>
+    <h1> {% if task.done == False %}☑{% else %}✅{% endif %}{{task.tittle}}</h1>    
+    
+    <p>{{task.description}}</p>
+    <p>Project: {{task.project.name}}</p>
+    <Button>Delete</Button>
+    <button> Done</button>
+</div>
+
+{% endfor %}
+
 <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque soluta voluptatibus error! Quia soluta expedita dolores labore, veritatis aperiam pariatur.</h2>
