Herencia entre templates

--- a/myapp/templates/about.html
+++ b/myapp/templates/about.html
@@ -1,3 +1,10 @@
+{% extends 'layouts/base.html' %}
+
+{% block content %}
+
 <h1>About</h1>
 
 <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis vero placeat nihil soluta consequuntur, consequatur incidunt voluptatibus. Inventore ipsum asperiores, placeat laudantium expedita at a aspernatur esse, autem officiis tempora?</h2>
+
+{% endblock %}
+
