--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,3 +1,9 @@
+{% extends 'layouts/base.html' %}
+
+{% block content %}
 <h1>Welcome to django app</h1>
+
+
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam reiciendis soluta atque consequuntur, odit non quia quaerat consectetur iste, dolore repudiandae, iusto quas eveniet ipsam repellendus quos sed saepe tempora?</p>
 
+{% endblock %}
