--- a/myapp/templates/task.html
+++ b/myapp/templates/task.html
@@ -1,3 +1,7 @@
+{% extends 'layouts/base.html' %}
+
+{% block content %}
+
 <h1>Task</h1>
 
 {% for task in tasks %}
@@ -14,3 +18,5 @@
 {% endfor %}
 
 <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque soluta voluptatibus error! Quia soluta expedita dolores labore, veritatis aperiam pariatur.</h2>
+
+{% endblock %}
