--- a/myapp/templates/layouts/base.html
+++ b/myapp/templates/layouts/base.html
@@ -1,16 +1,22 @@
 <nav>
     <ul>
         <li>
-            <a href="/">Home</a>
+            <a href=""{% url 'index' %}"">Home</a>
         </li>
         <li>
-            <a href="/about">About</a>
+            <a href="{% url 'about' %}">About</a>
         </li>
         <li>
-            <a href="/projects">Project</a>
+            <a href="{% url 'projects' %}">Project</a>
         </li>
         <li>
-            <a href="/task">task</a>
+            <a href="{% url 'tasks' %}">task</a>
+        </li>
+        <li>
+            <a href="{% url 'create_task' %}">Create New Task</a>
+        </li>
+        <li>
+            <a href="{% url 'create_project' %}">Create New Project</a>
         </li>
     </ul>
 </nav>
