--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,9 +1,11 @@
 {% extends 'layouts/base.html' %}
 
+{% load static %}
+
 {% block content %}
-<h1>Welcome to django app</h1>
 
+<h1>Django proyects</h1>
 
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam reiciendis soluta atque consequuntur, odit non quia quaerat consectetur iste, dolore repudiandae, iusto quas eveniet ipsam repellendus quos sed saepe tempora?</p>
+<img src="{% static 'fondo.jpg' %}" alt="" width="600">
 
 {% endblock %}
