--- a/myapp/static/styles/main.css
+++ b/myapp/static/styles/main.css
@@ -5,12 +5,13 @@ body{
 
 .navbar{
     background: #404040;
+    border: 3px solid #fff;
 }
 
 .navbar ul{
     display: flex;
     justify-content: space-between;
-    padding: 10px 40px;
+    padding: 40px 40px;
 }
 .navbar ul li{
     list-style-type: none;
@@ -26,15 +27,18 @@ body{
 .container{
     max-width: none;
     margin: auto;
-    background: red;
     padding: 10px 40px;
 }
 
 .card{
-    background: whitesmoke;
+    background: black;
+    border: 3px solid #fff;
     padding: 10px;
-    color: black;
     margin-bottom: 2px;
+}
+.card a{
+    color: white;
+    text-decoration: none;
 }
 
 .input {
